temp/Stress-Testing/10-Tests/ingress-oss-10.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-oss-0
spec:
  ingressClassName: nginx-oss
  rules:
  - host: test-0.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-oss-1
spec:
  ingressClassName: nginx-oss
  rules:
  - host: test-1.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-oss-2
spec:
  ingressClassName: nginx-oss
  rules:
  - host: test-2.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-oss-3
spec:
  ingressClassName: nginx-oss
  rules:
  - host: test-3.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-oss-4
spec:
  ingressClassName: nginx-oss
  rules:
  - host: test-4.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-oss-5
spec:
  ingressClassName: nginx-oss
  rules:
  - host: test-5.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-oss-6
spec:
  ingressClassName: nginx-oss
  rules:
  - host: test-6.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-oss-7
spec:
  ingressClassName: nginx-oss
  rules:
  - host: test-7.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-oss-8
spec:
  ingressClassName: nginx-oss
  rules:
  - host: test-8.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-oss-9
spec:
  ingressClassName: nginx-oss
  rules:
  - host: test-9.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80
