temp/Stress-Testing/10-Tests/ingress-plus-10-waf.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-plus-0
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/tea"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"  
spec:
  ingressClassName: nginx-plus
  rules:
  - host: test-0.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80
      - path: /path233
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-plus-1
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/www"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"  
spec:
  ingressClassName: nginx-plus
  rules:
  - host: test-1.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-plus-2
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/www1"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"  
spec:
  ingressClassName: nginx-plus
  rules:
  - host: test-2.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-plus-3
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/www2"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"  
spec:
  ingressClassName: nginx-plus
  rules:
  - host: test-3.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-plus-4
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/www3"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"  
spec:
  ingressClassName: nginx-plus
  rules:
  - host: test-4.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80
      - path: /path433
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-plus-5
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/www4"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"  
spec:
  ingressClassName: nginx-plus
  rules:
  - host: test-5.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80
      - path: /path222
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-plus-6
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/www5"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"  
spec:
  ingressClassName: nginx-plus
  rules:
  - host: test-6.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-plus-7
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/www6"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"  
spec:
  ingressClassName: nginx-plus
  rules:
  - host: test-7.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-plus-8
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/www7"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"  
spec:
  ingressClassName: nginx-plus
  rules:
  - host: test-8.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-plus-9
  annotations:
    appprotect.f5.com/app-protect-policy: "app-protect/www8"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "app-protect/logconf"  
spec:
  ingressClassName: nginx-plus
  rules:
  - host: test-9.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80
